--- a/Gabriel_Padilla_P1/appsettings.json
+++ b/Gabriel_Padilla_P1/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Gabriel_Padilla_P1Context": "Server=admin\\SQLEXPRESS;Database=Gabriel_Padilla_P1Context-c0174e1b-4e6d-4b3e-a1d9-41ad8719a7be;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
